  - Make it possible to move group by move handle
  - Make it possible to set text color for a node group
  - Make it possible to set color for a node group
  - Make it possible to set attached image for a node group
  - Allow group action when setting colors via node handle
  - Allow deletion of multiple nodes
* Fix GitHub Issue #118: Make it possible to delete nodes with Delete key
* Fix GitHub Issue #122: Make it possible to select node groups also with Shift key

Bug fixes:

* Fix GitHub Issue #120: Crash when connecting to the initial node

Other:

* Prevent the system context menu on node text edit
* Open node context menu also when right-clicking on text edit
* Don't immediately hide handles on move because it's annoying

1.21.0
======

New features:

* Fix GitHub Issue #111: Optimizer: Save optimizer settings to file
* Fix GitHub Issue #109: Make default direction of arrows configurable

1.20.0
======

New features:

* Fix GitHub Issue #38: Add display grid option

Bug fixes:

* Fix Github Issue #106: Memory leak when changing Edge width, Text size and corner radius

Other:

* Fix GitHub Issue #98: Program doesn't remember the window being maximized

1.19.0
======

New features:

* Fix GitHub Issue #77: Ctrl+S on new map should directly open 'save as' dialog
* Fix GitHub Issue #85: Export SVG
* Fix GitHub Issue #100: Use a better initial directory when saving a new file
* Add Dutch translations

Bug fixes:

* Fix GitHub Issue #87: Group move doesn't work with the move handle
* Fix GitHub Issue #97: Redo does stuff when redo shouldn't be possible
* Fix GitHub Issue #96: Saving sometimes doesn't work after loading an existing file

Other:

* Fix GitHub Issue #99: Program doesn't remember grid size
* Fix GitHub Issue #101: Windows portable

1.18.0
======

New features:

* Add a shortcut Ctrl+Shift+F to create new floating nodes

Bug fixes:

* Make layout optimizer honor the active grid setting

Other:

* Usability improvement: Move create node action to top